--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,11 @@ repositories {
     mavenCentral()
 }
 
+bootJar {
+    enabled = true
+    archiveFileName = 'app.jar'
+}
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
