--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,8 +12,8 @@ permissions:
 jobs:
   build:
     name: Build & Deploy
-    runs-on: self-hosted
-    environment: develop
+    runs-on: ubuntu-latest
+    environment: prod
     steps:
       - uses: actions/checkout@v3
       - name: Set up JDK 17
@@ -36,6 +36,17 @@ jobs:
           ./gradlew clean test --stacktrace --parallel
       - name: Build with Gradle
         run: |
-          ./gradlew war --parallel
-      - name: Upload Jar
-        run: sshpass -p ${{ secrets.SERVER_PASSWORD }} scp ./build/libs/app.war ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }}:${{ secrets.DEPLOY_PATH }}
+          ./gradlew bootJar --parallel
+#      - name: Upload Jar
+#        run: sshpass -p ${{ secrets.SERVER_PASSWORD }} scp -o StrictHostKeyChecking=no ./build/libs/app.war ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }}:${{ secrets.DEPLOY_PATH }}
+      - name: Copy jar file to remote
+        uses: appleboy/scp-action@v0.1.3
+        with:
+          host: ${{ secrets.SERVER_IP }}
+          username: ${{ secrets.SERVER_USERNAME }}
+          password: ${{ secrets.SERVER_PASSWORD }}
+#          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: 22
+          source: "./build/libs/app.jar"
+          target: ${{ secrets.DEPLOY_PATH }}
+          strip_components: 1
