feat: workflows 파일 수정중

--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ repositories {
 
 bootJar {
     enabled = true
-    archiveFileName = 'app.jar'
+    archiveFileName = 'card-study-api.jar'
 }
 
 dependencies {
