--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,16 +37,26 @@ jobs:
       - name: Build with Gradle
         run: |
           ./gradlew bootJar --parallel
-#      - name: Upload Jar
-#        run: sshpass -p ${{ secrets.SERVER_PASSWORD }} scp -o StrictHostKeyChecking=no ./build/libs/app.war ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }}:${{ secrets.DEPLOY_PATH }}
       - name: Copy jar file to remote
-        uses: appleboy/scp-action@v0.1.3
+        uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.SERVER_IP }}
           username: ${{ secrets.SERVER_USERNAME }}
           password: ${{ secrets.SERVER_PASSWORD }}
-#          key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: 22
-          source: "./build/libs/app.jar"
+          source: "./build/libs/card-study-api.jar"
           target: ${{ secrets.DEPLOY_PATH }}
           strip_components: 1
+      - name: Run jar file
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SERVER_IP }}
+          username: ${{ secrets.SERVER_USERNAME }}
+          password: ${{ secrets.SERVER_PASSWORD }}
+          port: 22
+          script: |
+            cd ${{ secrets.DEPLOY_PATH }}
+            DATABASE_URL=${{ secrets.SERVER_PASSWORD }} \
+            DATABASE_USERNAME=${{ secrets.SERVER_PASSWORD }} \
+            DATABASE_PASSWORD=${{ secrets.SERVER_PASSWORD }} \
+            nohup java -jar -Dspring.profiles.active=prod ./build/libs/card-study-api.jar > ./card-study-api.log 2>&1 &
