--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: org.h2.Driver
-    url: 'jdbc:h2:./data/card-study'
+    url: 'jdbc:h2:./data/card-study?mode=MySQL;AUTO_SERVER=TRUE'
     username: sa
   jpa:
     show-sql: true
