--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -1,11 +1,16 @@
 spring:
   datasource:
     driver-class-name: org.h2.Driver
-    url: 'jdbc:h2:./data/card-study?mode=MySQL;AUTO_SERVER=TRUE'
+    url: 'jdbc:h2:./data/card-study'
     username: sa
   jpa:
     show-sql: true
     hibernate:
       ddl-auto: update
+      dialect: org.hibernate.dialect.H2Dialect
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
 
 
