--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,16 +11,23 @@ permissions:
 
 jobs:
   build:
-    name: Build & Deploy
+    name: Create Docker Image
     runs-on: self-hosted
     environment: prod
     steps:
       - uses: actions/checkout@v3
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
+      - uses: actions/setup-java@v3
         with:
           java-version: "17"
           distribution: "adopt"
+      - name: Docker meta
+        id: docker_meta
+        uses: crazy-max/ghaction-docker-meta@v1
+        with:
+          images: card-study-api
+          tag-semver: |
+            {{version}}
+            {{major}}.{{minor}}
       - name: Gradle Caching
         uses: actions/cache@v3
         with:
@@ -37,6 +44,24 @@ jobs:
       - name: Build with Gradle
         run: |
           ./gradlew bootJar --parallel
+          jobs:
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      - name: Docker Build and Push
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: ./Dockerfile
+          tags: ${{ steps.docker_meta.outputs.tags }}
+          labels: ${{ steps.docker_meta.outputs.labels }}
+          push: true
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
 #      - name: Copy jar file to remote
 #        uses: appleboy/scp-action@master
