--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -1,9 +1,9 @@
 spring:
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
-    url: ${DATABASE_URL}
-    username: ${DATABASE_USERNAME}
-    password: ${DATABASE_PASSWORD}
+    url: ${DATABASE_URL:jdbc:mariadb://localhost:3312/card_study?useSSL=false&serverTimezone=UTC}
+    username: ${DATABASE_USERNAME:card-study-app}
+    password: ${DATABASE_PASSWORD:card-study-app}
 
   jpa:
     hibernate:
@@ -14,4 +14,4 @@ spring:
         dialect: org.hibernate.dialect.MariaDBDialect
 logging:
   level:
-    root: debug
+    root: info
