--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,9 +42,7 @@ jobs:
           chmod +x ./gradlew
           ./gradlew clean test --stacktrace --parallel
       - name: Build with Gradle
-        run: |
-          ./gradlew bootJar --parallel
-          jobs:
+        run: ./gradlew bootJar --parallel
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       - name: Login to DockerHub
