--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ permissions:
 
 jobs:
   build:
-    name: Create Docker Image
+    name: Build
     runs-on: self-hosted
     environment: prod
     steps:
@@ -55,32 +55,9 @@ jobs:
         with:
           context: .
           file: ./Dockerfile
+          platforms: linux/amd64
           tags: ${{ steps.docker_meta.outputs.tags }}
           labels: ${{ steps.docker_meta.outputs.labels }}
           push: true
           cache-from: type=gha
           cache-to: type=gha,mode=max
-
-#      - name: Copy jar file to remote
-#        uses: appleboy/scp-action@master
-#        with:
-#          host: ${{ secrets.SERVER_IP }}
-#          username: ${{ secrets.SERVER_USERNAME }}
-#          password: ${{ secrets.SERVER_PASSWORD }}
-#          port: 22
-#          source: "./build/libs/card-study-api.jar"
-#          target: ${{ secrets.DEPLOY_PATH }}
-#          strip_components: 1
-#      - name: Run jar file
-#        uses: appleboy/ssh-action@master
-#        with:
-#          host: ${{ secrets.SERVER_IP }}
-#          username: ${{ secrets.SERVER_USERNAME }}
-#          password: ${{ secrets.SERVER_PASSWORD }}
-#          port: 22
-#          script: |
-#            cd ${{ secrets.DEPLOY_PATH }}
-#            DATABASE_URL=${{ secrets.DATABASE_URL }} \
-#            DATABASE_USERNAME=${{ secrets.DATABASE_USERNAME }} \
-#            DATABASE_PASSWORD=${{ secrets.DATABASE_PASSWORD }} \
-#            nohup java -jar -Dspring.profiles.active=prod -Dserver.port=${{ secrets.APP_PORT }} ./build/libs/card-study-api.jar > ./card-study-api.log 2>&1 &
