--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
         id: docker_meta
         uses: crazy-max/ghaction-docker-meta@v1
         with:
-          images: card-study-api
+          images: ${{ secrets.DOCKERHUB_REPOSITORY }}
           tag-semver: |
             {{version}}
             {{major}}.{{minor}}
