--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,4 +59,32 @@ jobs:
           push: true
           cache-from: type=gha
           cache-to: type=gha,mode=max
-#
+
+  deploy:
+    needs: build
+    runs-on: self-hosted
+    environment: prod
+    steps:
+      - name: Docker meta
+        id: docker_meta
+        uses: crazy-max/ghaction-docker-meta@v1
+        with:
+          images: ${{ secrets.DOCKERHUB_REPOSITORY }}
+          tag-semver: |
+            {{version}}
+            {{major}}.{{minor}}
+      - name: Deploy to Server
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USERNAME }}
+          password: ${{ secrets.SERVER_PASSWORD }}
+          script: |
+            docker pull ${{ secrets.DOCKERHUB_REPOSITORY }}:${{ steps.docker_meta.outputs.tags }}
+            docker run -d \
+            -e spring.profiles.active=prod \
+            -e DATABASE_URL=${{ secrets.DATABASE_URL }} \
+            -e DATABASE_USERNAME=${{ secrets.DATABASE_USERNAME }} \
+            -e DATABASE_PASSWORD=${{ secrets.DATABASE_PASSWORD }} \
+            -p ${{ secrets.SERVER_PORT }}:8080 \
+            ${{ secrets.DOCKERHUB_REPOSITORY }}:${{ steps.docker_meta.outputs.tags }}
