--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,102 +1,86 @@
-name: CI/CD with Gradle
-
-on:
-  push:
-    branches: ["main"]
-
-permissions:
-  contents: read
-
-jobs:
-  build:
-    name: Build
-    runs-on: self-hosted
-    environment: prod
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
-        with:
-          java-version: "17"
-          distribution: "adopt"
-      - name: Docker meta
-        id: docker_meta
-        uses: crazy-max/ghaction-docker-meta@v1
-        with:
-          images: ${{ secrets.DOCKERHUB_REPOSITORY }}
-          tag-semver: |
-            {{version}}
-            {{major}}.{{minor}}
-      - name: Gradle Caching
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
-      - name: Test with Gradle
-        run: |
-          chmod +x ./gradlew
-          ./gradlew clean test --stacktrace --parallel
-      - name: Build with Gradle
-        run: ./gradlew bootJar --parallel
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-      - name: Docker Build and Push
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          file: ./Dockerfile
-          platforms: linux/amd64
-          tags: ${{ steps.docker_meta.outputs.tags }}
-          labels: ${{ steps.docker_meta.outputs.labels }}
-          push: true
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
-  deploy:
-    needs: build
-    runs-on: self-hosted
-    environment: prod
-    steps:
-      - name: Docker meta
-        id: docker_meta
-        uses: crazy-max/ghaction-docker-meta@v1
-        with:
-          images: ${{ secrets.DOCKERHUB_REPOSITORY }}
-          tag-semver: |
-            {{version}}
-            {{major}}.{{minor}}
-      - name: Deploy to Server
-        shell: bash
-        run: |
-          docker pull ${{ secrets.DOCKERHUB_REPOSITORY }}:${{ steps.docker_meta.outputs.tags }}
-          docker run -d \
-          -e spring.profiles.active=prod \
-          -e DATABASE_URL=${{ secrets.DATABASE_URL }} \
-          -e DATABASE_USERNAME=${{ secrets.DATABASE_USERNAME }} \
-          -e DATABASE_PASSWORD=${{ secrets.DATABASE_PASSWORD }} \
-          -p ${{ secrets.SERVER_PORT }}:8080 \
-          ${{ secrets.DOCKERHUB_REPOSITORY }}:${{ steps.docker_meta.outputs.tags }}
-
-#      - name: Deploy to Server
-#        uses: appleboy/ssh-action@master
+#name: CI/CD with Gradle
+#
+#on:
+#  push:
+#    branches: ["main"]
+#
+#permissions:
+#  contents: read
+#
+#jobs:
+#  build:
+#    name: Build
+#    runs-on: self-hosted
+#    environment: prod
+#    steps:
+#      - uses: actions/checkout@v3
+#      - uses: actions/setup-java@v3
 #        with:
-#          host: ${{ secrets.SERVER_HOST }}
-#          username: ${{ secrets.SERVER_USERNAME }}
-#          password: ${{ secrets.SERVER_PASSWORD }}
-#          script: |
-#            docker pull ${{ secrets.DOCKERHUB_REPOSITORY }}:${{ steps.docker_meta.outputs.tags }}
-#            docker run -d \
-#            -e spring.profiles.active=prod \
-#            -e DATABASE_URL=${{ secrets.DATABASE_URL }} \
-#            -e DATABASE_USERNAME=${{ secrets.DATABASE_USERNAME }} \
-#            -e DATABASE_PASSWORD=${{ secrets.DATABASE_PASSWORD }} \
-#            -p ${{ secrets.SERVER_PORT }}:8080 \
-#            ${{ secrets.DOCKERHUB_REPOSITORY }}:${{ steps.docker_meta.outputs.tags }}
+#          java-version: "17"
+#          distribution: "adopt"
+#      - name: Docker meta
+#        id: docker_meta
+#        uses: crazy-max/ghaction-docker-meta@v1
+#        with:
+#          images: ${{ secrets.DOCKERHUB_REPOSITORY }}
+#          tag-semver: |
+#            {{version}}
+#            {{major}}.{{minor}}
+#      - name: Gradle Caching
+#        uses: actions/cache@v3
+#        with:
+#          path: |
+#            ~/.gradle/caches
+#            ~/.gradle/wrapper
+#          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+#          restore-keys: |
+#            ${{ runner.os }}-gradle-
+#      - name: Test with Gradle
+#        run: |
+#          chmod +x ./gradlew
+#          ./gradlew clean test --stacktrace --parallel
+#      - name: Build with Gradle
+#        run: ./gradlew bootJar --parallel
+#      - name: Set up Docker Buildx
+#        uses: docker/setup-buildx-action@v2
+#      - name: Login to DockerHub
+#        uses: docker/login-action@v1
+#        with:
+#          username: ${{ secrets.DOCKERHUB_USERNAME }}
+#          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+#      - name: Docker Build and Push
+#        uses: docker/build-push-action@v4
+#        with:
+#          context: .
+#          file: ./Dockerfile
+#          platforms: linux/amd64
+#          tags: ${{ steps.docker_meta.outputs.tags }}
+#          labels: ${{ steps.docker_meta.outputs.labels }}
+#          push: true
+#          cache-from: type=gha
+#          cache-to: type=gha,mode=max
+#
+#  deploy:
+#    needs: build
+#    runs-on: self-hosted
+#    environment: prod
+#    steps:
+#      - name: Docker meta
+#        id: docker_meta
+#        uses: crazy-max/ghaction-docker-meta@v1
+#        with:
+#          images: ${{ secrets.DOCKERHUB_REPOSITORY }}
+#          tag-semver: |
+#            {{version}}
+#            {{major}}.{{minor}}
+#      - name: Deploy to Server
+#        shell: bash
+#        run: |
+#          docker pull ${{ secrets.DOCKERHUB_REPOSITORY }}:${{ steps.docker_meta.outputs.tags }}
+#          docker run -d \
+#          -e spring.profiles.active=prod \
+#          -e DATABASE_URL=${{ secrets.DATABASE_URL }} \
+#          -e DATABASE_USERNAME=${{ secrets.DATABASE_USERNAME }} \
+#          -e DATABASE_PASSWORD=${{ secrets.DATABASE_PASSWORD }} \
+#          -p ${{ secrets.SERVER_PORT }}:8080 \
+#          ${{ secrets.DOCKERHUB_REPOSITORY }}:${{ steps.docker_meta.outputs.tags }}
